src/css/custom.css
/* ... */
.button.button--secondary.button--outline:not(.button--active):not(:hover) {
  color: #ffffff;
}

/* Footer */

footer svg {
  display: inline;
}

.footer .footer__svg {
  @apply m-8 inline fill-current;
}

.footer .footer__link-item span svg {
  @apply hidden;
}

@media (max-width: 996px) {
  .footer .footer__separators {
    display: none;
  }

  .DocSearch-Button {
    @apply mr-2 !important;
  }

  /* .footer .footer__block {
    display: block;
  } */
}

/* Docs */

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.docs-image-centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 25px;
}

.docs-image-max-width-20 {
  width: 20%;
}

.docs-image-max-width-50 {
  width: 50%;
}

.hero--primary {
  background-color: var(--ifm-color-hero-background-dark);
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

#mc-embedded-waitlist {
  margin-top: 15px;
}

.related-read-div {
  border-width: 0;
  padding: 7px var(--ifm-alert-padding-horizontal);
  margin-bottom: 0.5em;
}

.related-read-label {
  font-weight: 600;
}

/* Reset margin bottom on h3 (refer docs community section li item heading) after disabling tailwind preflight. */
h3 {
  margin-bottom: 1px;
}

/* Reset any border-radius applied to images inside <td> elements. (see os icons and cross and tick icons in table) */
td img {
  border-radius: 0 !important;
}

.related-read-link {
  margin-left: 7px;
}

.related-read-archetype-tag {
  padding: 3px 6px;
  color: #ffffff;
  font-size: 0.8em;
  border-radius: 6px;
  margin-left: 7px;
}

.archetype-tag-operation-guide {
  background-color: #ca1a7b;
}

.archetype-tag-developer-guide {
  background-color: #ca811a;
}

.archetype-tag-tutorial {
  background-color: #1ac9c7;
}

.archetype-tag-explanation {
  background-color: #78c91a;
}

.archetype-tag-reference {
  background-color: #cf8f19;
}

.docs-image-wrapper {
  position: static;
  width: 100%;
  background-color: #efefef;
  margin: 0 0 15px 0;
  padding: 0;
}

.docs-centered-image-wrapper {
  width: 100%;
  text-align: center;
  margin: 0;
  padding: 15px;
}

.docs-image-title-wrapper {
  width: 100%;
  margin: 0;
  padding: 15px;
  text-align: left;
  font-size: 0.9em;
  font-weight: 300;
  color: #121212;
}

.docs-image-title {
  margin: 0px !important;
}

.docs-centered-image-size-100 {
  max-width: 1024px;
}

.docs-centered-image-size-75 {
  max-width: 768px;
}

.docs-centered-image-size-50 {
  max-width: 640px;
}

.docs-centered-image-size-25 {
  max-width: 400px;
}

@media screen and (max-width: 1024px) {
  .docs-centered-image-size-100 {
    max-width: 100%;
  }

  .docs-centered-image-size-75 {
    max-width: 75%;
  }

  .docs-centered-image-size-50 {
    max-width: 50%;
  }

  .docs-centered-image-size-25 {
    max-width: 25%;
  }
}

.docs-image-legend-wrapper {
  width: 100%;
  margin: 0;
  padding: 15px;
  text-align: left;
  font-size: 0.9em;
  font-weight: 300;
  color: #121212;
}

.docs-image-legend-list {
  margin: 0px !important;
  padding: 0;
  list-style-type: none;
}

.docs-image-legend-symbol {
  font-size: 1.2em;
  font-weight: 600;
}

.scale {
  @apply transition hover:scale-105 motion-reduce:transform-none motion-reduce:transition-none;
}

/* .tableOfContents {
  max-height: calc(100vh - (var(--ifm-navbar-height) + 2rem));
  overflow-y: auto;
  position: sticky;
  top: calc(var(--ifm-navbar-height) + 1rem);
} */

/* hacks to counteract tailwind typography clashing with docusaurus tabs */
.prose .tabs-container > .tabs > .tabs__item::before {
  content: none;
}

.prose .tabs-container > .tabs > .tabs__item {
  padding-left: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  margin-bottom: 0em;
  opacity: 0.5;
}

.prose .tabs-container > .tabs > .tabs__item.tabs__item--active {
  opacity: 1;
}

.prose .tabs {
  padding: 0 !important;
}

.prose .tabs-container ul {
  margin: 0;
  margin-bottom: -1.25rem;
}

.prose .tabs-container > .margin-vert--md pre {
  margin: 0;
}

/* otherwise tailwind typography gives very ugly margins on inline images */
.prose li img {
  margin: 0;
}

/* otherwise tailwind typography gives very ugly margins on li children */
.prose > ol > li > :first-child,
.prose > ul > li > :first-child,
.prose > ol > li > :last-child,
.prose > ul > li > :last-child {
  margin: 0 !important;
  /* sorry cant figure out how else to do this, prose @media overriding - swyx */
}

.prose li > ul {
  margin-top: 1rem !important;
  /* sorry cant figure out how else to do this, prose @media overriding - swyx */
}

.prose :where(a code) {
  color: unset;
}

.prose pre.prism-code {
  margin: 0;
}

.codeBlockContainer_node_modules-\@docusaurus-theme-classic-lib-next-theme-CodeBlock-styles-module {
  box-shadow: none !important;
  margin: 0;
  padding: 0;
  font-size: 0.95em;
}

[data-theme="light"] .prose :where(pre code):not(.not-prose) {
  background-color: #ffffff;
}

[data-theme="light"]
  .prose
  :where(pre):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
  background-color: #ffffff;
}

.header-github-link:hover {
  opacity: 0.6;
}
/* ... */

